--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ for: Elmi Academy JS2020 class
 
 body {
   font-size: 18px;
+  background: #269ebd;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,6 +26,7 @@ body {
 
 .phone {
   position: relative;
+  background: #ffffff;
   display: flex;
   flex-direction: column;
   height: 480px;
@@ -175,6 +177,7 @@ body {
   margin: auto;
   transition: all ease-in-out 0.5s;
 }
+
 .keyboard button span {
   position: absolute;
   bottom: 3px;
