--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ body {
 .phone {
   position: relative;
   background: #ffffff;
+  /* background-image: url(./wallpaper.jpg); */
+  background-size: cover;
   display: flex;
   flex-direction: column;
   height: 480px;
@@ -59,6 +61,7 @@ body {
   border-bottom-right-radius: 25px;
   border-bottom-left-radius: 25px;
 }
+
 
 .mic {
   position: absolute;
@@ -145,6 +148,7 @@ body {
   left: 13px;
   width: 200px;
   height: 100px;
+  overflow: hidden;
 }
 
 .screen span {
@@ -175,7 +179,7 @@ body {
   border: none;
   border-radius: 25px;
   margin: auto;
-  transition: all ease-in-out 0.5s;
+  /* transition: all ease-in-out 0.5s; */
 }
 
 .keyboard button span {
@@ -239,4 +243,16 @@ img {
   left: 5px;
   font-size: 0.2em;
   font-weight: bold;
+}
+
+
+
+.hide {
+  visibility: hidden;
+}
+
+.add-bg {
+  background-image: url(wallpaper.jpg);
+  background-size: cover;
+  background-position: center;
 }
